; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/extr_maxinefb.c_maxinefb_setcolreg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/extr_maxinefb.c_maxinefb_setcolreg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fb_info = type { i32 }

@IMS332_REG_COLOR_PALETTE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32, i32, %struct.fb_info*)* @maxinefb_setcolreg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @maxinefb_setcolreg(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, %struct.fb_info* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.fb_info*, align 8
  %13 = alloca i64, align 8
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store %struct.fb_info* %5, %struct.fb_info** %12, align 8
  store i64 0, i64* %13, align 8
  %14 = load i32, i32* %8, align 4
  %15 = lshr i32 %14, 8
  store i32 %15, i32* %8, align 4
  %16 = load i32, i32* %9, align 4
  %17 = lshr i32 %16, 8
  store i32 %17, i32* %9, align 4
  %18 = load i32, i32* %10, align 4
  %19 = lshr i32 %18, 8
  store i32 %19, i32* %10, align 4
  %20 = load i32, i32* %10, align 4
  %21 = shl i32 %20, 16
  %22 = load i32, i32* %9, align 4
  %23 = shl i32 %22, 8
  %24 = add i32 %21, %23
  %25 = load i32, i32* %8, align 4
  %26 = add i32 %24, %25
  %27 = zext i32 %26 to i64
  store i64 %27, i64* %13, align 8
  %28 = load i32, i32* @IMS332_REG_COLOR_PALETTE, align 4
  %29 = load i32, i32* %7, align 4
  %30 = add i32 %28, %29
  %31 = load i64, i64* %13, align 8
  %32 = call i32 @maxinefb_ims332_write_register(i32 %30, i64 %31)
  ret i32 0
}

declare dso_local i32 @maxinefb_ims332_write_register(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
